.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tool-container-benchmark
spec:
  template:
    spec:
      containers:
        - name: service
          livenessProbe:
            httpGet:
              path: "container-benchmark/ping"
              port: service
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: "container-benchmark/ping"
              port: service
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              memory: 512Mi
